2nd Year Archive pt.2/_Introduction to Compilers/Week 7 Antlr with Listeners/Calculator.g4
grammar Calculator;

@header {
package calculator;
}

prog: stat+;

stat: (ID '=')? expr;

expr: operand ADD operand # Add
	| operand SUB operand # Sub
	| operand MUL operand # Mul
	| operand DIV operand # Div
	| operand MOD operand # Mod
	;

operand: INT+ (DOT INT+)?
	| ID
	| '(' expr ')'
	;

ID : [a-z]+;	
INT : [0-9]+;
ADD : '+';
SUB : '-';
MUL : '*';
DIV : '/';
MOD : '%';
DOT : '.';
WS : [ \t\r\n]+ -> skip ; 
